Added extra html files for page redirection when button is clicked

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Lobster&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Lobster&family=Volkhov&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Assets/style/style.css">
     <title>FTS</title>
     
   </head>
@@ -16,13 +16,13 @@
       <div class="top-bar-left">
         <ul class="menu">
           <li class="menu-text">FTS</li>
-          <li><a href="#">Weather</a></li>
+          <li><a href="/weather.html">Weather</a></li>
           <li><a href="#">Teams</a></li>
         </ul>
       </div>
       <div class="top-bar-right">
         <ul class="menu">
-          <li><a href="#">MyTeam</a></li>
+          <li><a href="/MyTeam.html">MyTeam</a></li>
           <li><a href="#">Contact Us</a></li>
           <li><a href="#">About Us</a></li>
           <li><a href="#">Location</a></li>
