Added redirection for buttons when clicked

--- a/JS/index.html
+++ b/JS/index.html
@@ -9,12 +9,15 @@
 <body>
    <section>
     <navbar></navbar>
-    <div id="ClickMe">
+    <div id="ClickMe" id="test"><!--Expiremental Button-->
         <button type="button" id="btn"> Weather</button>
-        <input type="text" placeholder="team" id="team" >
+        <input type="text" placeholder="team" id="team" > 
     </div>
    </section>
-        <script src = "https://code.jquery.com/jquery-3.7.1.min.js"></script> <!--Jquery-->
+        <script src = "https://code.jquery.com/jquery-3.7.1.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>  <!---Day JS Time/Day/Month/Year-->
+         <!--Jquery-->
         <script src = "./main.js"></script>
+        
 </body>
 </html>
