Changed a bit of details and added some information and pictures

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <div class="row column text-center">
         <h1><b>The Beginning of Sport Tracker</b></h1>
         <p class="lead"><i>Want to keep track of your Favorite Football Sports Team? Click below to learn more.</i></p>
+         <image src = "./Assets/Images/american-football-stadium-american-football-stadium-sport-142156207.jpg" id="test"></image>
         <a href="#" class="button large">Learn More</a>
         <a href="#" class="button large hollow">Weather</a>
       </div>
@@ -42,7 +43,7 @@
 
     <div class="row">
       <div class="medium-6 columns medium-push-6">
-        <img class="thumbnail" src="">
+        <img class="thumbnail" src="./Assets/Images/Wallpapers Cool NFL - 2023 NFL Football Wallpapers.jpg">
       </div>
       <div class="medium-6 columns medium-pull-6" id="FontC">
         <h2>MyFTS</h2>
@@ -139,7 +140,7 @@
 
     <script src = "https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-    <script src = "./main.js"></script>
+    <script src = "./JS/main.js"></script>
     <script>
       $(document).foundation();
     </script>
