--- a/weather.html
+++ b/weather.html
@@ -1,11 +1,135 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<html class="no-js" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Lobster&family=Volkhov&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+    <link rel="stylesheet" href="/Assets/style/style.css">
+    <title>FTS</title>
     
-</body>
+  </head>
+  <body>
+
+    <!-- Start Top Bar -->
+    <div class="top-bar">
+      <div class="top-bar-left">
+        <ul class="menu">
+          <li class="menu-text">FTS</li>
+          <li><a href="/weather.html">Weather</a></li>
+          <li><a href="#">Teams</a></li>
+        </ul>
+      </div>
+      <div class="top-bar-right">
+        <ul class="menu">
+          <li><a href="/MyTeam.html">MyTeam</a></li>
+          <li><a href="#">Location</a></li>
+        </ul>
+      </div>
+    </div>
+    <!-- End Top Bar -->
+
+    <div class="callout large">
+      <div class="row column text-center">
+        <h1><b>The Beginning of Sport Tracker</b></h1>
+        <p class="lead"><i>Want to keep track of your Favorite Football Sports Team? Click below to learn more.</i></p>
+         <image src = "./Assets/Images/american-football-stadium-american-football-stadium-sport-142156207.jpg" id="test"></image>
+        <a href="#" class="button large">Learn More</a>
+        <a href="#" class="button large hollow">Weather</a>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="medium-6 columns medium-push-6">
+        <img class="thumbnail" src="./Assets/Images/Wallpapers Cool NFL - 2023 NFL Football Wallpapers.jpg">
+      </div>
+      <div class="medium-6 columns medium-pull-6" id="FontC">
+        <h2>MyFTS</h2>
+            <p>Welcome to MyFTS! If you have stumbled across this page you must be wondering. What is MyFTS? Well to begin with. MyFTS is a website
+                that lets you keep track of YOUR Favorite Team Stats. What does FTS stand for? Well FTS stands for "Favorite Team Stats".
+                We all have a favorite team, whether it be in Basketball,Baseball, or Football. Currently MyFTS helps you keep track of your 
+                Favorite Team Stats making it easier for everyone to see.
+            </p>             
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="medium-4 columns">
+        <h3>Trending News</h3>
+        <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
+      </div>
+      <div class="medium-4 columns">
+        <h3>Javascript</h3>
+        <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
+      </div>
+      <div class="medium-4 columns">
+        <h3>Marketing</h3>
+        <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
+      </div>
+    </div>
+
+    <hr> <!--Line between Contents-->
+
+    <div class="row column">
+      <h3>Our Recent Work</h3>
+    </div>
+
+    <div class="row medium-up-3 large-up-4">
+      <div class="column">
+        <img class="thumbnail" src="https://placehold.it/550x550">
+      </div>
+      <div class="column">
+        <img class="thumbnail" src="https://placehold.it/550x550">
+      </div>
+      <div class="column">
+        <img class="thumbnail" src="https://placehold.it/550x550">
+      </div>
+      <div class="column">
+        <img class="thumbnail" src="https://placehold.it/550x550">
+      </div>
+    </div>
+
+    <hr>
+
+    <footer class="row column">
+      <div class="AboutUs">
+        <h1>About Us</h1>
+        <p></p>
+        </div>
+        <hr>
+      <div class="ContactUs">
+        <h1>Contact Information</h1>
+        <ul>
+            <li>
+            Email: Jaylon Allen:
+            </li>
+
+            <li>
+            Email: Jack Straughberg:
+            </li>
+
+            <li>
+            Email: Damaris Maldonado:
+            </li>
+
+            <li>
+            Email: Landan Bichard:
+            </li>
+
+            <li>
+            Email: Victor Hernandez:
+            </li>
+
+        </ul>
+      </div>
+    </div>
+
+    <script src = "https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+    <script src = "./JS/main.js"></script>
+    <script>
+      $(document).foundation();
+    </script>
+  </body>
 </html>
+
