--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Lobster&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Lobster&family=Volkhov&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-    <link rel="stylesheet" href="/Assets/style/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>FTS</title>
     
   </head>
@@ -16,13 +16,13 @@
       <div class="top-bar-left">
         <ul class="menu">
           <li class="menu-text">FTS</li>
-          <li><a href="/weather.html">Weather</a></li>
+          <li><a href="#">Weather</a></li>
           <li><a href="#">Teams</a></li>
         </ul>
       </div>
       <div class="top-bar-right">
         <ul class="menu">
-          <li><a href="/MyTeam.html">MyTeam</a></li>
+          <li><a href="#">MyTeam</a></li>
           <li><a href="#">Contact Us</a></li>
           <li><a href="#">About Us</a></li>
           <li><a href="#">Location</a></li>
@@ -35,7 +35,6 @@
       <div class="row column text-center">
         <h1><b>The Beginning of Sport Tracker</b></h1>
         <p class="lead"><i>Want to keep track of your Favorite Football Sports Team? Click below to learn more.</i></p>
-         <image src = "./Assets/Images/american-football-stadium-american-football-stadium-sport-142156207.jpg" id="test"></image>
         <a href="#" class="button large">Learn More</a>
         <a href="#" class="button large hollow">Weather</a>
       </div>
@@ -43,7 +42,7 @@
 
     <div class="row">
       <div class="medium-6 columns medium-push-6">
-        <img class="thumbnail" src="./Assets/Images/Wallpapers Cool NFL - 2023 NFL Football Wallpapers.jpg">
+        <img class="thumbnail" src="">
       </div>
       <div class="medium-6 columns medium-pull-6" id="FontC">
         <h2>MyFTS</h2>
@@ -140,7 +139,7 @@
 
     <script src = "https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-    <script src = "./JS/main.js"></script>
+    <script src = "./main.js"></script>
     <script>
       $(document).foundation();
     </script>
