--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Lobster&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Lobster&family=Volkhov&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Assets/style/style.css">
     <title>FTS</title>
     
   </head>
@@ -16,15 +16,13 @@
       <div class="top-bar-left">
         <ul class="menu">
           <li class="menu-text">FTS</li>
-          <li><a href="#">Weather</a></li>
+          <li><a href="/weather.html">Weather</a></li>
           <li><a href="#">Teams</a></li>
         </ul>
       </div>
       <div class="top-bar-right">
         <ul class="menu">
-          <li><a href="#">MyTeam</a></li>
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">About Us</a></li>
+          <li><a href="/MyTeam.html">MyTeam</a></li>
           <li><a href="#">Location</a></li>
         </ul>
       </div>
@@ -35,6 +33,7 @@
       <div class="row column text-center">
         <h1><b>The Beginning of Sport Tracker</b></h1>
         <p class="lead"><i>Want to keep track of your Favorite Football Sports Team? Click below to learn more.</i></p>
+         <image src = "./Assets/Images/american-football-stadium-american-football-stadium-sport-142156207.jpg" id="test"></image>
         <a href="#" class="button large">Learn More</a>
         <a href="#" class="button large hollow">Weather</a>
       </div>
@@ -42,7 +41,7 @@
 
     <div class="row">
       <div class="medium-6 columns medium-push-6">
-        <img class="thumbnail" src="">
+        <img class="thumbnail" src="./Assets/Images/Wallpapers Cool NFL - 2023 NFL Football Wallpapers.jpg">
       </div>
       <div class="medium-6 columns medium-pull-6" id="FontC">
         <h2>MyFTS</h2>
@@ -56,7 +55,7 @@
 
     <div class="row">
       <div class="medium-4 columns">
-        <h3>Photoshop</h3>
+        <h3>Trending News</h3>
         <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
       </div>
       <div class="medium-4 columns">
@@ -69,19 +68,7 @@
       </div>
     </div>
 
-    <hr>
-
-    <div class="row column">
-      <ul class="vertical medium-horizontal menu expanded text-center">
-        <li><a href="#"><div class="stat">28</div><span>Websites</span></a></li>
-        <li><a href="#"><div class="stat">43</div><span>Apps</span></a></li>
-        <li><a href="#"><div class="stat">95</div><span>Ads</span></a></li>
-        <li><a href="#"><div class="stat">59</div><span>Cakes</span></a></li>
-        <li><a href="#"><div class="stat">18</div><span>Logos</span></a></li>
-      </ul>
-    </div>
-
-    <hr>
+    <hr> <!--Line between Contents-->
 
     <div class="row column">
       <h3>Our Recent Work</h3>
@@ -100,49 +87,48 @@
       <div class="column">
         <img class="thumbnail" src="https://placehold.it/550x550">
       </div>
-      <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
-      </div>
-      <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
-      </div>
-      <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
-      </div>
-      <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
-      </div>
-      <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
-      </div>
-      <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
-      </div>
-      <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
-      </div>
-      <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
-      </div>
     </div>
 
     <hr>
 
-    <div class="row column">
-      <ul class="menu">
-        <li><a href="#">One</a></li>
-        <li><a href="#">Two</a></li>
-        <li><a href="#">Three</a></li>
-        <li><a href="#">Four</a></li>
-      </ul>
+    <footer class="row column">
+      <div class="AboutUs">
+        <h1>About Us</h1>
+        <p></p>
+        </div>
+        <hr>
+      <div class="ContactUs">
+        <h1>Contact Information</h1>
+        <ul>
+            <li>
+            Email: Jaylon Allen:
+            </li>
+
+            <li>
+            Email: Jack Straughberg:
+            </li>
+
+            <li>
+            Email: Damaris Maldonado:
+            </li>
+
+            <li>
+            Email: Landan Bichard:
+            </li>
+
+            <li>
+            Email: Victor Hernandez:
+            </li>
+
+        </ul>
+      </div>
     </div>
 
     <script src = "https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-    <script src = "./main.js"></script>
+    <script src = "./JS/main.js"></script>
     <script>
       $(document).foundation();
     </script>
   </body>
 </html>
-
