Starting the weather page, made some buttons work

--- a/weather.html
+++ b/weather.html
@@ -15,8 +15,8 @@
     <div class="top-bar">
       <div class="top-bar-left">
         <ul class="menu">
-          <li class="menu-text">FTS</li>
-          <li><a href="/weather.html">Weather</a></li>
+          <li class="menu-text"><a href="/index.html">FTS</a></li>
+          <li><a href="./index.html">Weather</a></li>
           <li><a href="#">Teams</a></li>
         </ul>
       </div>
@@ -28,16 +28,12 @@
       </div>
     </div>
     <!-- End Top Bar -->
-
-    <div class="callout large">
-      <div class="row column text-center">
-        <h1><b>The Beginning of Sport Tracker</b></h1>
-        <p class="lead"><i>Want to keep track of your Favorite Football Sports Team? Click below to learn more.</i></p>
-         <image src = "./Assets/Images/american-football-stadium-american-football-stadium-sport-142156207.jpg" id="test"></image>
-        <a href="#" class="button large">Learn More</a>
-        <a href="#" class="button large hollow">Weather</a>
+    <section>
+      <div class="large-10 row">
+       <button type="submit" style="background-color:grey">Submit</button>
+       <input type="text" placeholder="Enter City Here">
       </div>
-    </div>
+    </section>
 
     <div class="row">
       <div class="medium-6 columns medium-push-6">
@@ -52,7 +48,9 @@
             </p>             
       </div>
     </div>
-
+    <div class = "large-10 row">
+      <h3>hey whatsup</h3>
+    </div>
     <div class="row">
       <div class="medium-4 columns">
         <h3>Trending News</h3>
@@ -69,59 +67,7 @@
     </div>
 
     <hr> <!--Line between Contents-->
-
-    <div class="row column">
-      <h3>Our Recent Work</h3>
-    </div>
-
-    <div class="row medium-up-3 large-up-4">
-      <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
-      </div>
-      <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
-      </div>
-      <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
-      </div>
-      <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
-      </div>
-    </div>
-
-    <hr>
-
-    <footer class="row column">
-      <div class="AboutUs">
-        <h1>About Us</h1>
-        <p></p>
-        </div>
-        <hr>
-      <div class="ContactUs">
-        <h1>Contact Information</h1>
-        <ul>
-            <li>
-            Email: Jaylon Allen:
-            </li>
-
-            <li>
-            Email: Jack Straughberg:
-            </li>
-
-            <li>
-            Email: Damaris Maldonado:
-            </li>
-
-            <li>
-            Email: Landan Bichard:
-            </li>
-
-            <li>
-            Email: Victor Hernandez:
-            </li>
-
-        </ul>
-      </div>
+    
     </div>
 
     <script src = "https://code.jquery.com/jquery-3.7.1.min.js"></script>
@@ -132,4 +78,3 @@
     </script>
   </body>
 </html>
-
