--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="top-bar">
       <div class="top-bar-left">
         <ul class="menu">
-          <li class="menu-text"><a href="./index.html">FTS</a></li>
-          <li><a href="/weather.html">Weather</a></li>
+          <li class="menu-text">FTS</li>
+          <li><a href="weather.html">Weather</a></li>
           <li><a href="#">Teams</a></li>
         </ul>
       </div>
@@ -35,7 +35,7 @@
         <p class="lead"><i>Want to keep track of your Favorite Football Sports Team? Click below to learn more.</i></p>
          <image src = "./Assets/Images/american-football-stadium-american-football-stadium-sport-142156207.jpg" id="test"></image>
         <a href="#" class="button large">Learn More</a>
-        <a href="./weather.html" class="button large hollow">Weather</a>
+        <a href="#" class="button large hollow">Weather</a>
       </div>
     </div>
 
@@ -59,7 +59,8 @@
         <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
       </div>
       <div class="medium-4 columns">
-        <image src = " "></image>
+        <h3>Javascript</h3>
+        <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
       </div>
       <div class="medium-4 columns">
         <h3>2022 NFL Standings</h3>
