--- a/index.html
+++ b/index.html
@@ -105,9 +105,7 @@
     <hr> <!--Line between Contents-->
 
     <div class="row column">
-      <h3>Our Recent Work</h3>
     </div>
-
     <div class="row medium-up-3 large-up-4">
       <div class="column">
         <img class="thumbnail" src="https://placehold.it/550x550">
@@ -139,7 +137,7 @@
         <hr>
       <div class="ContactUs">
         <h1>Contact Information</h1>
-        <ul>
+        <ul id="list">
             <li>
             Email: Jaylon Allen: jaylon@unfzd.com
             </li>
