--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
       </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <script src = "https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
     <script src = "./JS/main.js"></script>
