--- a/weather.html
+++ b/weather.html
@@ -42,7 +42,7 @@
     </div>
     <div class="container-fluid">
       <div class="row">
-          <div class="col-sm-4">
+          <div class="columns small-4">
               <div class="row" id="row1">
                   Type below to search for a city:
               </div>
@@ -50,7 +50,7 @@
               </div>
           </div>
               <div class="row">
-                  <form class="form-inline my-2 my-sm-0">
+                  <form class="form-inline my-2 small-0">
                       <input class="form-control mr-sm-2" type="search" placeholder="Type a city" aria-label="Search" id="searchInput">
                       <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
                   </form>
@@ -61,7 +61,7 @@
                   </div>
               </div>
               <section id="Weather-Beginning">
-              <div class="col-lg-8" id="weathers">
+              <div class="columns large-8" id="weathers">
                   <div class="row" id="weathershow">
                       <div class="card" style="width: 98%;" id="cardDisplay">
   
@@ -76,7 +76,7 @@
                                   </div>
       
                               </div>
-                              <div class="col-lg-4" id="mainIcon">
+                              <div class="columns large-4" id="mainIcon">
                                   <!-- Main -->
                               </div>
                           </div>
