Fixing css: Credit Damaris

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 
     <!-- Start Top Bar -->
     <div class="top-bar">
-      <div class="top-bar-left">
+      <div class="top-bar-left" id="top-bar-left">
         <ul class="menu">
           <li class="menu-text">FTS</li>
           <li><a href="weather.html">Weather</a></li>
           <li><a href="#">Teams</a></li>
         </ul>
+        <img src ="./Assets/Images/american-football-stadium-american-football-stadium-sport-142156207.jpg">
       </div>
       <div class="top-bar-right">
         <ul class="menu">
@@ -34,7 +35,7 @@
         <h1><b>The Beginning of Sport Tracker</b></h1>
         <p class="lead"><i>Want to keep track of your Favorite Football Sports Team? Click below to learn more.</i></p>
          <image src = "./Assets/Images/american-football-stadium-american-football-stadium-sport-142156207.jpg" id="test"></image>
-        <a href="#" class="button large">Learn More</a>
+        <a href="#" class="button large" id="learnmore">Learn More</a>
         <a href="#" class="button large hollow">Weather</a>
       </div>
     </div>
@@ -122,7 +123,10 @@
     </div>
 
     <hr>
-
+    <div>
+      <img src = "./Assets/Images/">
+    </div>
+    <hr>
     <footer class="row column">
       <div class="AboutUs">
         <h1>About Us</h1>
@@ -133,7 +137,6 @@
           MyFTS also showcases last season's standings so that you can keep track of the progress your team
           has made. 
         </p>
-        </div>
         <hr>
       <div class="ContactUs">
         <h1>Contact Information</h1>
