Added placeholder card to MyTeam page

--- a/MyTeam.html
+++ b/MyTeam.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
     <link rel="stylesheet" href="/Assets/style/style.css">
     <title>MyTeam</title>
 </head>
@@ -11,6 +12,21 @@
         Pull team
      </button>
 
+     <div class="card" style="width: 300px;"> 
+        <div class="card-divider"> 
+            Team Name?
+        </div> 
+        <img src= 
+        "https://placehold.co/600x400/EEE/31343C"> 
+        <div class="card-section"> 
+            <h4>More Placeholder Text</h4> 
+            <p>Also More Placeholder Text</p> 
+        </div> 
+        <div class="card-divider"> 
+            Put something here 
+        </div> 
+    </div> 
+    
      <script src="./JS/MyTeam.js"></script>
 </body>
 </html>
