--- a/weather.html
+++ b/weather.html
@@ -16,8 +16,8 @@
     <div class="top-bar">
       <div class="top-bar-left">
         <ul class="menu">
-          <li class="menu-text"><a href="/index.html">FTS</a></li>
-          <li><a href="./index.html">Weather</a></li>
+          <li class="menu-text"><a href="index.html">FTS</a></li>
+          <li><a href="index.html">Weather</a></li>
           <li><a href="#">Teams</a></li>
         </ul>
       </div>
