--- a/MyTeam.html
+++ b/MyTeam.html
@@ -27,6 +27,21 @@
       </div>
     </div>
     <!-- End Top Bar -->
+    
+    <div class="card" style="width: 300px;"> 
+        <div class="card-divider"> 
+            Team Name?
+        </div> 
+        <img src= 
+        "https://placehold.co/600x400/EEE/31343C"> 
+        <div class="card-section"> 
+            <h4>More Placeholder Text</h4> 
+            <p>Also More Placeholder Text</p> 
+        </div> 
+        <div class="card-divider"> 
+            Put something here 
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <script src = "https://code.jquery.com/jquery-3.7.1.min.js"></script>
