--- a/MyTeam.html
+++ b/MyTeam.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Lobster&family=Volkhov&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
     <link rel="stylesheet" href="Assets/style/style.css">
+    <link rel="stylesheet" href="Assets/style/MyTeam.css">
     <title>FTS</title>
     
   </head>
@@ -27,21 +28,31 @@
       </div>
     </div>
     <!-- End Top Bar -->
-    
-    <div class="card" style="width: 300px;"> 
-        <div class="card-divider"> 
-            Team Name?
-        </div> 
-        <img src= 
-        "https://placehold.co/600x400/EEE/31343C"> 
-        <div class="card-section"> 
-            <h4>More Placeholder Text</h4> 
-            <p>Also More Placeholder Text</p> 
-        </div> 
-        <div class="card-divider"> 
-            Put something here 
-        </div>
+
+    <h2>Modal</h2>
+
+<!-- Trigger/Open The Modal -->
+<button id="myBtn">Open Modal</button>
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <div class="modal-header">
+      <span class="close">&times;</span>
+      <h2>Text Here</h2>
     </div>
+    <div class="modal-body">
+      <p id="TeamHere"></p>
+      <p id="IdHere">Some other text...</p>
+    </div>
+    <div class="modal-footer">
+      <h3>Modal Footer</h3>
+    </div>
+  </div>
+
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <script src = "https://code.jquery.com/jquery-3.7.1.min.js"></script>
