--- a/MyTeam.html
+++ b/MyTeam.html
@@ -42,14 +42,14 @@
     <div class="modal-header">
       <span class="close">&times;</span>
       <h2 id="TeamNames">Text Here</h2>
+      <img src = " " id= "logoHere">
     </div>
     <div class="modal-body">
       <p id="TeamHere">team name</p>
       <p id="IdHere">Some other text...</p>
-      <p><a href="" id="logoHere"></a></p>
     </div>
     <div class="modal-footer">
-      <h3>Modal Footer</h3>
+      <img src = " " id="FlagHere">
     </div>
   </div>
 
