Testing Whether Website Link Works

--- a/MyTeam.html
+++ b/MyTeam.html
@@ -23,7 +23,7 @@
       </div>
       <div class="top-bar-right">
         <ul class="menu">
-          <li><a href="/MyTeam.html">MyTeam</a></li>
+          <li><a href="MyTeam.html">MyTeam</a></li>
         </ul>
       </div>
     </div>
