Fixed the anchor tag links and the button links

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul class="menu">
           <li class="menu-text">FTS</li>
           <li><a href="weather.html">Weather</a></li>
-          <li><a href="#">Teams</a></li>
+          <li><a href="#S2022">2022 Standings</a></li>
         </ul>
         <img src ="./Assets/Images/american-football-stadium-american-football-stadium-sport-142156207.jpg">
       </div>
@@ -35,8 +35,8 @@
         <h1><b>The Beginning of Sport Tracker</b></h1>
         <p class="lead"><i>Want to keep track of your Favorite Football Sports Team? Click below to learn more.</i></p>
          <image src = "./Assets/Images/american-football-stadium-american-football-stadium-sport-142156207.jpg" id="test"></image>
-        <a href="#" class="button large" id="learnmore">Learn More</a>
-        <a href="#" class="button large hollow">Weather</a>
+        <a href="#AUS" class="button large" id="learnmore">Learn More</a>
+        <a href="weather.html" class="button large hollow">Weather</a>
       </div>
     </div>
 
@@ -64,7 +64,7 @@
         <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
       </div>
       <div class="medium-4 columns">
-        <h3>2022 NFL Standings</h3>
+        <h3 id="S2022">2022 NFL Standings</h3>
         <ol>
           <li>Chiefs       (14-3)</li>
            <li>Eagles      (14-3)</li> 
@@ -129,7 +129,7 @@
     <hr>
     <footer class="row column">
       <div class="AboutUs">
-        <h1>About Us</h1>
+        <h1 id="AUS">About Us</h1>
         <p id="AU">What's worse than getting drenched while at a football game? Well with
           our new innovative website, not only can you see when your team plays, thanks to
           MyFTS (My Favorite Team Stats), you can also see the weather conditions in the area.
