--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </li>
 
             <li>
-            Email: Jack Straughberg: TBA
+            Email: Jack Strasbaugh: jackstrasbaugh@yahoo.com
             </li>
 
             <li>
