--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <li><a href="weather.html">Weather</a></li>
           <li><a href="#S2022">2022 Standings</a></li>
         </ul>
-        <img src ="./Assets/Images/american-football-stadium-american-football-stadium-sport-142156207.jpg">
+        <img src ="./Assets/Images/fts logo.JPG" id="test"></image>
       </div>
       <div class="top-bar-right">
         <ul class="menu">
@@ -34,7 +34,7 @@
       <div class="row column text-center">
         <h1><b>The Beginning of Sport Tracker</b></h1>
         <p class="lead"><i>Want to keep track of your Favorite Football Sports Team? Click below to learn more.</i></p>
-         <image src = "./Assets/Images/american-football-stadium-american-football-stadium-sport-142156207.jpg" id="test"></image>
+         <image src = "./Assets/Images/football and helmet on field.jpg" id="test"></image>
         <a href="#AUS" class="button large" id="learnmore">Learn More</a>
         <a href="weather.html" class="button large hollow">Weather</a>
       </div>
@@ -56,12 +56,7 @@
 
     <div class="row">
       <div class="medium-4 columns">
-        <h3>Trending News</h3>
-        <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
-      </div>
-      <div class="medium-4 columns">
-        <h3>Javascript</h3>
-        <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
+        <img class="thumbnail" src= "./Assets/Images/trophy.jpg"></image>
       </div>
       <div class="medium-4 columns">
         <h3 id="S2022">2022 NFL Standings</h3>
@@ -109,23 +104,22 @@
     </div>
     <div class="row medium-up-3 large-up-4">
       <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
+        <img class="thumbnail" src= "./Assets/Images/hamlin.jpg">
       </div>
       <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
+        <img class="thumbnail" src="./Assets/Images/jefferson.jpg">
       </div>
       <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
+        <img class="thumbnail" src="./Assets/Images/mahomes.jpg">
       </div>
       <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
+        <img class="thumbnail" src="./Assets/Images/parsons.jpg">
       </div>
     </div>
 
     <hr>
     <div>
-      <img src = "./Assets/Images/">
-    </div>
+   
     <hr>
     <footer class="row column">
       <div class="AboutUs">
@@ -139,6 +133,7 @@
         </p>
         <hr>
       <div class="ContactUs">
+        <img src = "./Assets/Images/about us banner.jpg">
         <h1>Contact Information</h1>
         <ul id="list">
             <li>
