--- a/weather.html
+++ b/weather.html
@@ -20,6 +20,7 @@
           <li><a href="index.html">Weather</a></li>
           <li><a href="#">Teams</a></li>
         </ul>
+        <img src ="./Assets/Images/fts logo.JPG" id="test"></image>
       </div>
       <div class="top-bar-right">
         <ul class="menu">
@@ -31,10 +32,9 @@
     <!-- End Top Bar -->
 
     <div class="row">
+      <img src="./Assets/Images/weather logo.JPG">
       <div class="medium-6 columns medium-push-6">
-        <img class="thumbnail" src="./Assets/Images/Wallpapers Cool NFL - 2023 NFL Football Wallpapers.jpg">
       </div>
-      <div class="medium-6 columns medium-pull-6" id="FontC">
         <h2>Weather Search</h2>
             <p>Ever wanted to search for the weather where your NFL team will be playing? Well on this page you can just look up the city and you
               will see the forecast for the next five days. All you have to do is search.
@@ -44,8 +44,7 @@
     <div class="container-fluid">
       <div class="row">
           <div class="columns small-4">
-              <div class="row" id="row1">
-                  Type below to search for a city:
+          Type below to search for a city:
               </div>
               
               </div>
@@ -96,17 +95,7 @@
           </section>
     <div class="row">
       <div class="medium-4 columns">
-        <h3>Trending News</h3>
-        <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
-      </div>
-      <div class="medium-4 columns">
-        <h3>Javascript</h3>
-        <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
-      </div>
-      <div class="medium-4 columns">
-        <h3>Marketing</h3>
-        <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
-      </div>
+        <img src = "./Assets/Images/US map.JPG">
     </div>
 
     <hr> <!--Line between Contents-->
